--- a/style/style.scss
+++ b/style/style.scss
@@ -1,3 +1,7 @@
+@import 'navigation';
+@import 'header';
+@import 'variables';
+
 html{
 box-sizing: border-box;
 font-family: 'Public Sans', sans-serif;
