--- a/style/style.css
+++ b/style/style.css
@@ -61,6 +61,57 @@
   margin-bottom: 10px;
 }
 
+.main-banner {
+  margin-top: 20px;
+  height: 700px;
+  background-image: url(../images/bg-intro-desktop.svg);
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: right top;
+  z-index: -1;
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.main-banner .main-banner__general {
+  max-width: 450px;
+  margin: 159px 106px;
+  display: block;
+}
+
+.main-banner .main-banner__general .main-banner__header {
+  font-size: 48px;
+  font-weight: 300;
+}
+
+.main-banner .main-banner__general .main-banner__text {
+  font-size: 18px;
+  color: #9b9b9b;
+  margin-bottom: 30px;
+  max-width: 380px;
+}
+
+.main-banner .main-banner__general .main-banner__button {
+  background: -webkit-gradient(linear, left top, right top, from(#31d35c), to(#2bb7da));
+  background: linear-gradient(to right, #31d35c, #2bb7da);
+  padding: 12px 25px;
+  color: white;
+  border: none;
+  border-radius: 5rem;
+}
+
+.main-banner .main-banner__photo .main-banner__photo-item {
+  max-width: 650px;
+  position: absolute;
+  z-index: -1;
+}
+
 html {
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
