--- a/style/style.css
+++ b/style/style.css
@@ -62,7 +62,7 @@
 }
 
 .main-banner {
-  margin-top: 20px;
+  margin-top: 5px;
   height: 700px;
   background-image: url(../images/bg-intro-desktop.svg);
   background-repeat: no-repeat;
@@ -107,9 +107,39 @@
 }
 
 .main-banner .main-banner__photo .main-banner__photo-item {
-  max-width: 650px;
+  max-width: 600px;
   position: absolute;
   z-index: -1;
+}
+
+.why-section {
+  background-color: #f3f2f2;
+  padding: 30px 106px;
+  position: relative;
+  z-index: -1;
+}
+
+.why-section .why-section__header {
+  font-size: 32px;
+  font-weight: 300;
+  margin-bottom: 40px;
+}
+
+.why-section .why-section__text {
+  max-width: 400px;
+  color: #2d314d;
+}
+
+.why-section .why-reason {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
+.why-section .why-reason .why-reason__item {
+  margin-right: 45px;
+  width: 250px;
+  margin-top: 30px;
 }
 
 html {
