--- a/style/_navigation.scss
+++ b/style/_navigation.scss
@@ -7,13 +7,14 @@ top:0;
 padding:20px;
 padding-bottom:0px ;
 position: sticky;
-background-color: rgb(247, 247, 247);
+background-color: hsl(0, 5%, 96%);
 .main-navigation__inner{
 display: flex;
 justify-content: space-around;
 align-items: center;
 .main-navigation__logo-link{
 margin-top: -3px;
+padding-left:40px;
 display: block;
 }
 .main-navigation__menu{
@@ -25,7 +26,7 @@ margin-top:0px;
 margin-right: 40px;
 padding-bottom: 16px;
 list-style-type: none;
-color:gray;
+color:$fontColor;
 font-size: 15px;
 cursor:pointer;
 }
