--- a/style/style.scss
+++ b/style/style.scss
@@ -2,7 +2,8 @@
 @import 'header';
 @import 'variables';
 @import 'section';
-
+@import 'article';
+@import 'footer';
 
 html{
 box-sizing: border-box;
