--- a/style/_header.scss
+++ b/style/_header.scss
@@ -1,7 +1,8 @@
 .main-banner{
 @include contains;
 margin-top: 5px;
-height:700px;
+
+margin-bottom: 100px;
 background-image: url(../images/bg-intro-desktop.svg);
 background-repeat: no-repeat;
 background-size:contain;
@@ -12,9 +13,10 @@ display:flex;
 flex-direction: row;
 .main-banner__general{
 max-width:450px;
-margin-top: 159px;
+margin-top: 179px;
 margin-right: 100px;
 display: block;
+
 
 .main-banner__header{
 font-size: 48px;
@@ -33,10 +35,64 @@ max-width: 380px;
 }
 .main-banner__photo{
 .main-banner__photo-item{
-max-width: 600px;
+max-width: 500px;
 position: absolute;
 z-index: -1;
 
 }
 }
 };
+
+@media(max-width:767px){
+.main-banner{
+flex-direction: column-reverse;
+padding-top: 215px;
+margin-left: 15px;
+margin-right: 10px;
+
+.main-banner__general{
+margin-top: 170px;
+text-align: center;
+justify-content: center;
+align-items: center;
+margin-left: 0px;
+width:300px;
+
+.main-banner__header{
+    font-size: 34px;
+margin-top: 0;
+margin-left: 5px;}
+.main-banner__text{
+width:300px;
+margin-left: 10px;
+font-size: 14px;
+}
+}
+}}
+
+@media(max-width:767px){
+    .main-banner__photo-item{
+        width: 300px;
+margin-top: -300px;
+margin-left: 15px;
+    }
+
+}
+@media(min-width:768px)
+{
+.main-banner{
+    .main-banner__general{
+margin-right: -70px;
+    }
+
+}}
+
+@media(min-width:1025px){
+    .main-banner{
+        .main-banner__general{
+    margin-right: 100px;
+        }
+
+    }}
+
+
